[gd_scene load_steps=5 format=3 uid="uid://d2sbyoknqlax6"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_us28c"]
[ext_resource type="Theme" uid="uid://cw0pjns4rx0om" path="res://new_theme.tres" id="2_nu067"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s45ia"]
load_path = "res://.godot/imported/shot.png-9d5126deb1fd9135cad1590f1d212cb3.ctex"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikhy1"]
bg_color = Color(0.882353, 0.470588, 0.294118, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_us28c")

[node name="TextureRect" type="TextureRect" parent="."]
texture = SubResource("CompressedTexture2D_s45ia")
expand_mode = 1

[node name="CanvasLayerHUD" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayerHUD"]
offset_left = 2088.0
offset_top = 56.0
offset_right = 2362.0
offset_bottom = 207.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayerHUD/VBoxContainer"]
layout_mode = 2

[node name="LabelWidth" type="Label" parent="CanvasLayerHUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nu067")
text = "宽度："

[node name="LineEditWidth" type="LineEdit" parent="CanvasLayerHUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nu067")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayerHUD/VBoxContainer"]
layout_mode = 2

[node name="LabelHeight" type="Label" parent="CanvasLayerHUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_nu067")
text = "高度："

[node name="LineEditHeight" type="LineEdit" parent="CanvasLayerHUD/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_nu067")

[node name="ButtonSetting" type="Button" parent="CanvasLayerHUD"]
offset_left = 2088.0
offset_top = 200.0
offset_right = 2360.0
offset_bottom = 243.0
theme_override_colors/icon_disabled_color = Color(0.960784, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ikhy1")
text = "设置"

[node name="ButtonFile" type="Button" parent="CanvasLayerHUD"]
offset_left = 2088.0
offset_top = 272.0
offset_right = 2360.0
offset_bottom = 315.0
theme_override_colors/icon_disabled_color = Color(0.960784, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ikhy1")
text = "选择图片"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayerHUD"]
offset_left = 2088.0
offset_top = 416.0
offset_right = 2362.0
offset_bottom = 476.0

[node name="LabelPoint" type="Label" parent="CanvasLayerHUD/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_nu067")
text = "坐标："

[node name="LineEditPoint" type="LineEdit" parent="CanvasLayerHUD/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_nu067")
theme_override_font_sizes/font_size = 30

[node name="FileDialog" type="FileDialog" parent="."]
title = "选择一张图片"
initial_position = 1
size = Vector2i(600, 400)
visible = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg")
